# Neuroscan_MRI

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: api.py  dashboard.py
checkpoints/: neuroscan_seg.keras
neuroscan/: __init__.py  cls_model.py  config_loader.py  data_pipeline.py  explainability.py  inference.py  seg_model.py  trainer.py  visualizer.py
notebooks/: neuroscan_kaggle_training.ipynb
scripts/: convert_tif_to_png.py  evaluate_models.py  generate_synthetic_data.py  kaggle_train_script.py  train_classifier.py  train_segmenter.py
tests/: conftest.py  test_api.py  test_cls_model.py  test_data_pipeline.py  test_explainability.py  test_inference.py  test_seg_model.py  test_visualizer.py
