[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuroscan"
version = "2.0.0"
description = "NeuroScan: Autonomous MRI Pathology Analysis Pipeline"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuroscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
